# 2dTree

./: CMakeLists.txt  Statistic.cpp  Statistic.h  main.cpp
workDir/: God.cpp  God.h
workDir/algorithm/: Tree2D.cpp  Tree2D.h
workDir/utils/: Utils.cpp  Utils.h
workDir/widgets/: Canvas.cpp  Canvas.h  MainWindow.cpp  MainWindow.h
